# log4cpp

./: CMakeLists.txt
cmake/: log4cppConfig.cmake.in
